CVS code -
- README:
	- Add more miscellaneous cosmetic fixes. (DLR)
- doc/syntax/python.nanorc:
	- Improve string highlighting regexes. (Mike Frysinger)

GNU nano 2.0.2 - 2006.12.20
- General:
	- Miscellaneous comment fixes. (DLR)
- browser.c:
  do_browser()
	- Properly handle directories that contain nulls. (DLR)
- files.c:
  do_insertfile()
	- Properly handle filenames and executable commands that contain
	  nulls. (DLR)
  write_file()
	- Properly handle filenames that contain nulls. (DLR)
  do_writeout()
	- Fix a segfault when we can't get the full path of either the
	  filename we want to save under or the original filename. (DLR,
	  found by Mike Frysinger)
- nano.h:
	- Rename NANO_ALT_REPLACE_KEY to NANO_REPLACE_ALTKEY, for
	  consistency. (DLR)
	- Rename NANO_ALT_.* and NANO_.*ALTKEY to NANO_META_.* and
	  NANO_.*METAKEY, for consistency. (DLR)
- search.c:
  update_history()
	- Fix minor memory leak. (DLR)
- text.c:
  do_spell()
	- When setting i to the return value of write_(marked_)?file(),
	  use the "?" operator instead of an if/else clause. (DLR)
  do_verbatim_input()
	- Fix minor memory leak. (DLR)
- winio.c:
  parse_kbinput()
	- Add missing break. (DLR)
	- Fix minor memory leak. (Itay Perl)
  parse_verbatim_kbinput()
	- Fix minor memory leak. (DLR)
  edit_draw()
	- Fix potential warnings when assigning -1 to paintlen by using
	  if/else clauses instead of "?" operators. (DLR)
- configure.ac:
	- Reword several option descriptions, for clarity. (DLR)
- doc/faq.html:
	- Add miscellaneous wording and capitalization fixes. (DLR)
- BUGS:
	- Add miscellaneous cosmetic fixes. (DLR)
- README:
	- Update for the 2.0 branch of nano. (DLR)

GNU nano 2.0.1 - 2006.11.20
- General:
	- Miscellaneous comment fixes. (DLR)
	- Fix copyright notices to not abbreviate the year list using a
	  range.  Changes to do_credits() and all source files. (DLR)
- files.c:
  get_full_path()
	- Remove unneeded assert. (DLR)