@@ -3,7 +3,7 @@
  *   color.c                                                              *
  *                                                                        *
  *   Copyright (C) 2001, 2002, 2003, 2004 Chris Allegretta                *
- *   Copyright (C) 2005, 2006 David Lawrence Ramsey                       *
+ *   Copyright (C) 2005, 2006, 2007 David Lawrence Ramsey                 *
  *   This program is free software; you can redistribute it and/or modify *
  *   it under the terms of the GNU General Public License as published by *
  *   the Free Software Foundation; either version 2, or (at your option)  *
@@ -29,7 +29,7 @@
 #ifdef ENABLE_COLOR
 
 /* For each syntax list entry, go through the list of colors and assign
- * color pairs. */
+ * the color pairs. */
 void set_colorpairs(void)
 {
     const syntaxtype *this_syntax = syntaxes;
