@@ -3,7 +3,7 @@
  *   cut.c                                                                *
  *                                                                        *
  *   Copyright (C) 1999, 2000, 2001, 2002, 2003, 2004 Chris Allegretta    *
- *   Copyright (C) 2005, 2006 David Lawrence Ramsey                       *
+ *   Copyright (C) 2005, 2006, 2007 David Lawrence Ramsey                 *
  *   This program is free software; you can redistribute it and/or modify *
  *   it under the terms of the GNU General Public License as published by *
  *   the Free Software Foundation; either version 2, or (at your option)  *
@@ -146,7 +146,7 @@ void do_cut_text(
     if (copy_text) {
 	if (cutbuffer != NULL) {
 	    /* If the cutbuffer isn't empty, save where it currently
-	     * ends.  This is where the new text will be added. */
+	     * ends.  This is where we'll add the new text. */
 	    cb_save = cutbottom;
 	    cb_save_len = strlen(cutbottom->data);
 	}
@@ -173,12 +173,12 @@ void do_cut_text(
 	cut_marked();
 	openfile->mark_set = FALSE;
     } else if (ISSET(CUT_TO_END))
-	/* Otherwise, if the CUT_TO_END flag is set, move all text up to
-	 * the end of the line into the cutbuffer. */
+	/* If the CUT_TO_END flag is set, move all text up to the end of
+	 * the line into the cutbuffer. */
 	cut_to_eol();
     else
 #endif
-	/* Otherwise, move the entire line into the cutbuffer. */
+	/* Move the entire line into the cutbuffer. */
 	cut_line();
 
 #ifndef NANO_TINY
