@@ -3,7 +3,7 @@
  *   nano.c                                                               *
  *                                                                        *
  *   Copyright (C) 1999, 2000, 2001, 2002, 2003, 2004 Chris Allegretta    *
- *   Copyright (C) 2005, 2006 David Lawrence Ramsey                       *
+ *   Copyright (C) 2005, 2006, 2007 David Lawrence Ramsey                 *
  *   This program is free software; you can redistribute it and/or modify *
  *   it under the terms of the GNU General Public License as published by *
  *   the Free Software Foundation; either version 2, or (at your option)  *
@@ -47,7 +47,7 @@ static bool no_rcfiles = FALSE;
 static struct termios oldterm;
 	/* The user's original terminal settings. */
 static struct sigaction act;
-	/* For all our fun signal handlers. */
+	/* Used to set up all our fun signal handlers. */
 
 /* Create a new filestruct node.  Note that we do not set prevnode->next
  * to the new line. */
