@@ -3,7 +3,7 @@
  *   utils.c                                                              *
  *                                                                        *
  *   Copyright (C) 1999, 2000, 2001, 2002, 2003, 2004 Chris Allegretta    *
- *   Copyright (C) 2005, 2006 David Lawrence Ramsey                       *
+ *   Copyright (C) 2005, 2006, 2007 David Lawrence Ramsey                 *
  *   This program is free software; you can redistribute it and/or modify *
  *   it under the terms of the GNU General Public License as published by *
  *   the Free Software Foundation; either version 2, or (at your option)  *
@@ -46,7 +46,7 @@ int digits(size_t n)
 }
 
 /* Return the user's home directory.  We use $HOME, and if that fails,
- * we fall back on getpwuid(). */
+ * we fall back on the home directory of the effective user ID. */
 void get_homedir(void)
 {
     if (homedir == NULL) {
